# SC_AngelScript

tools/ASDocGenerator/current/: CMakeLists.txt
tools/ASDocGenerator/current/src/: CDocGenerator.h
tools/ASDocGenerator/current/src/utility/: CString.cpp  CString.h
